fraudms/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-ms
  namespace: banking
  labels:
    app: auth-ms
    version: v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: auth-ms
  template:
    metadata:
      labels:
        app: auth-ms
        version: v1
      annotations:
        sidecar.istio.io/inject: "true"
        prometheus.io/scrape: "true"
        prometheus.io/port:   "8073"
        prometheus.io/path:   "/actuator/prometheus"
    spec:
      serviceAccountName: auth-ms-sa
      containers:
        - name: auth-ms
          image: YOUR_DOCKERHUB/rewabank-auth-ms:latest
          ports:
            - containerPort: 8073
          resources:
            requests:
              memory: "256Mi"
              cpu:    "250m"
            limits:
              memory: "512Mi"
              cpu:    "500m"
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8073
            initialDelaySeconds: 60
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8073
            initialDelaySeconds: 30
            periodSeconds: 10
