fraudms/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fraud-service
  namespace: banking
  labels:
    app: fraud-ms
spec:
  selector:
    app: fraud-ms
  ports:
    - name: http
      port: 8094
      targetPort: 8094
  type: ClusterIP
